# diskmap

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: linux.yml  macos.yml
assets/: diskmap-demo.mkv
crates/dm-core/: Cargo.toml
crates/dm-core/src/: analysis.rs  cleanup.rs  color.rs  lib.rs  model.rs  treemap.rs
crates/dm-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/dm-ffi/src/: lib.rs
crates/dm-gtk/: Cargo.toml
crates/dm-gtk/src/: app.rs  main.rs  scan_worker.rs  treemap_widget.rs  window.rs
crates/dm-scan/: Cargo.toml
crates/dm-scan/src/: escalate.rs  lib.rs  walker.rs
macos/RustCore/: Package.swift
macos/RustCore/Sources/CRustCore/: shim.c
macos/RustCore/Sources/CRustCore/include/: dm_ffi.h
macos/Sources/: BreadcrumbBar.swift  ContentView.swift  DiskMapApp.swift  RustBridge.swift  ScanViewModel.swift  Sidebar.swift  TreemapCanvas.swift
packaging/: com.diskmap.app.yml  com.finndevs.diskmap.desktop  com.finndevs.diskmap.metainfo.xml  com.finndevs.diskmap.yml  diskmap.desktop  diskmap.metainfo.xml
packaging/flathub/: com.finndevs.diskmap.yml
scripts/: build-rust-universal.sh  generate-cargo-sources.py  release.sh
