[workspace]
members = ["crates/*"]
default-members = ["crates/dm-core", "crates/dm-scan", "crates/dm-ffi"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
dm-core = { path = "crates/dm-core" }
dm-scan = { path = "crates/dm-scan" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
